@@ -100,25 +100,27 @@ our %jobs_lut = (
 	21 => 'Peco Crusader',
 	22 => 'Wedding Suit',
 	23 => 'Super Novice',
-	161 => 'High Novice',	# 4001 is incorrect according to eAthena
-	4002 => 'High Swordsman',
-	4003 => 'High Magician',
-	4004 => 'High Archer',
-	4005 => 'High Acolyte',
-	4006 => 'High Merchant',
-	4007 => 'High Thief',
-	4008 => 'Lord Knight',
-	4009 => 'High Priest',
-	4010 => 'High Wizard',
-	4011 => 'Whitesmith',
-	4012 => 'Sniper',
-	4013 => 'Assassin Cross',
-	4015 => 'Paladin',
-	4016 => 'Champion',
-	4017 => 'Professor',
-	4018 => 'Stalker',
-	4019 => 'Creator',
-	4020 => 'Clown / Gypsy',
+	161 => 'High Novice',
+	162 => 'High Swordsman',
+	163 => 'High Magician',
+	164 => 'High Archer',
+	165 => 'High Acolyte',
+	166 => 'High Merchant',
+	167 => 'High Thief',
+	168 => 'Lord Knight',
+	169 => 'High Priest',
+	170 => 'High Wizard',
+	171 => 'Whitesmith',
+	172 => 'Sniper',
+	173 => 'Assassin Cross',
+	174 => 'Peco Lord Knight',
+	175 => 'Paladin',
+	176 => 'Champion',
+	177 => 'Professor',
+	178 => 'Stalker',
+	179 => 'Creator',
+	180 => 'Clown / Gypsy',
+	181 => 'Peco Paladin',
 );
 
 
